--- a/usage_scenario.yml
+++ b/usage_scenario.yml
@@ -9,9 +9,8 @@ services:
       context: ./python/examples/minimal_build/
       dockerfile: ./python/examples/minimal_build/Dockerfile.ubuntu
     image: arrow_ubuntu_minimal
-    volumes:
-      - ./:/arrow:delegated
-      - .:/io:delegated
+    setup-commands:
+      - cp -R /tmp/repo ~/arrow/
 
 
 flow:
@@ -19,5 +18,5 @@ flow:
     container: minimal-ubuntu-venv
     commands:
       - type: console
-        command: /io/python/examples/minimal_build/build_venv.sh
+        command: ~/arrow/python/examples/minimal_build/build_venv.sh
         note: Starting the arrow build
